--- a/public/flat-style.css
+++ b/public/flat-style.css
@@ -138,7 +138,7 @@ td.LabelContainer.q-checked:hover {
 .Skin label.SingleAnswer.q-checked > span::before,
 .Skin label.SingleAnswer.q-checked.q-focused > span::before {
   background: #0b6ed0
-    url(https://cdn.jsdelivr.net/gh/1nathanliang/pretty-qualtrics@0.0.0/public/check.svg)
+    url(https://cdn.jsdelivr.net/gh/1nathanliang/pretty-qualtrics/public/check.svg)
     no-repeat center center !important;
 }
 
