fixed bouncing div on click with border

--- a/public/flat-style.css
+++ b/public/flat-style.css
@@ -137,6 +137,7 @@ td.LabelContainer.q-checked:hover {
 .Skin label.MultipleAnswer.q-checked > span::before,
 .Skin label.SingleAnswer.q-checked > span::before,
 .Skin label.SingleAnswer.q-checked.q-focused > span::before {
+  border: 2px solid #0b6ed0 !important;
   background: #0b6ed0
     url(https://cdn.jsdelivr.net/gh/1nathanliang/pretty-qualtrics/public/check.svg)
     no-repeat center center !important;
